Fixed the overly complicated computation of the height of the removed rows in OutlineView::RemoveRow(BRow* row). It also contained a bug (tracked down by Duggan in ticket #3897, thanks!) which caused it to skip the sub-tree height computation when FindParent() returns false, which it does for root items. Now the computation is simple: The subTreeHeight is the height of the row itself, if a) the row doesn't have a parent or b) the parent is visible and expanded. Then if the row being removed is expanded, we calculate the sub-tree height recursively. Removed a lot of duplicated or even trippled checks along the way and solved two easily solvable TODOs with regards to what is invalidated. Previously the entire list view was invalidated for each row being removed, even if they were scrolled out the view bounds.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@38372 a95241bf-73f2-0310-859d-f6bbb57e9c96